--- a/Runly/Runly.Android/Runly.Android.csproj
+++ b/Runly/Runly.Android/Runly.Android.csproj
@@ -75,9 +75,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NotificationHelper.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplashActivity.cs" />
+    <Compile Include="StepCounterService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\xamarin.json" />
